enviando dados do formulario para a aplicação

--- a/src/main/resources/templates/formEvento.html
+++ b/src/main/resources/templates/formEvento.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Adicionar Evento</h1>
 
-	<form action="">
+	<form action="/eventos" method ="post">
 
 		<div>
 
@@ -16,17 +16,17 @@
 		</div>
 <div>
 
-			<label>local:</label> <input typer="text" name="local">
+			<label>Local:</label> <input typer="text" name="local">
 
 		</div>
 		<div>
 
-			<label>data:</label> <input typer="text" name="data">
+			<label>Data:</label> <input typer="text" name="data">
 
 		</div>
 		<div>
 
-			<label>horario:</label> <input typer="text" name="horario">
+			<label>Horario:</label> <input typer="text" name="horario">
 
 		</div>
 <div>
